# sip-videogen

./: .env.example  .gitignore  .pre-commit-config.yaml  BRAND_STUDIO_TASKS.md  BrandStudio.spec  HYBRID_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_THINKING_STEPS_ENHANCEMENT.md  IMPLEMENTATION_PLAN_THINKING_VISIBILITY.md  MIGRATION_NOTES.md  MIGRATION_PLAN.md  PR_GUIDE.md  README.md  SipStudio.spec  TASKS.md  TOOL_REFACTOR_PLAN.md  UI_FIX_PLAN.md  UI_REDESIGN_PLAN.md  WORKSTATION_IMPLEMENTATION_PLAN.md  WORKSTATION_TASKS.md  design-system-proposal.html  notes.md  pyproject.toml  setup.py  start.sh  studio  task_plan.md
.claude/: settings.local.json
design-system-audit/: IMPLEMENTATION_PLAN.md  REACT_ARIA_EVALUATION.md
dev-app/Sip Studio Dev.app/Contents/: Info.plist
docs/: AGENT_BEST_PRACTICES_RESEARCH_JAN_2026.md  IMPLEMENTATION_PLAN-gemini-prompting-v2.md  Plan for State-of-the-Art Gemini 3 Prompting.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_ROADMAP.md  SPEC-gemini-prompting-v2.md  TEMPLATE_FEATURE_TASKS.md  TEST-gemini-prompting-v2.md  legacy-cleanup-video-infra-todo.md  template-feature-plan.md
docs/architecture/: agent-patterns.md
scripts/: build-dmg.sh  build-release.sh  install-brand-studio.sh  install-sip-studio.sh  publish.sh  reset_brand_image_status.py  studio-demo.sh
specs/: PHASE1_PRODUCTION_REFACTOR.md
src/agents/: __init__.py  exceptions.py  run_context.py
src/sip_studio/: __init__.py  constants.py
src/sip_studio/advisor/: __init__.py  agent.py  context.py  context_budget.py  history_manager.py  hooks.py  image_analyzer.py  product_specs.py  prompt_builder.py  session_context_cache.py  session_history_manager.py  session_manager.py  style_reference_analyzer.py  style_reference_prompt.py
src/sip_studio/agents/: __init__.py  brand_director.py  brand_guardian.py  brand_strategist.py  brand_voice.py  continuity_supervisor.py  image_reviewer.py  music_director.py  production_designer.py  progress.py  prompt_repair.py  screenwriter.py  showrunner.py  visual_designer.py
src/sip_studio/assembler/: __init__.py  ffmpeg.py
src/sip_studio/brands/: __init__.py  context.py  feedback_analyzer.py  knowledge_summary.py  memory.py  product_description.py  sample_brand.py  text_utils.py  tools.py  visual_directive_generator.py
src/sip_studio/config/: __init__.py  logging.py  settings.py  user_preferences.py
src/sip_studio/generators/: __init__.py  base.py  factory.py  image_generator.py  kling_generator.py  music_generator.py  prompt_builder.py  sora_generator.py  video_generator.py
src/sip_studio/models/: __init__.py  agent_outputs.py  aspect_ratio.py  assets.py  brand_agent_outputs.py  script.py
src/sip_studio/research/: __init__.py  models.py  storage.py
src/sip_studio/studio/: __init__.py  __main__.py  app.py  bridge.py  job_state.py  state.py  updater.py
src/sip_studio/utils/: __init__.py
src/sip_studio/video/: __init__.py  pipeline.py
src/sip_videogen/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
src/sip_videogen/advisor/: __init__.py  agent.py  context_budget.py  history_manager.py  hooks.py  image_analyzer.py  product_specs.py  prompt_builder.py  style_reference_analyzer.py  style_reference_prompt.py  template_analyzer.py  template_prompt.py  tools.py  validation.py
src/sip_videogen/agents/: __init__.py  brand_director.py  brand_guardian.py  brand_strategist.py  brand_voice.py  continuity_supervisor.py  progress.py  prompt_loader.py  screenwriter.py  showrunner.py  visual_designer.py
src/sip_videogen/assembler/: __init__.py  ffmpeg.py
src/sip_videogen/brand_kit/: __init__.py  workflow.py
src/sip_videogen/brands/: __init__.py  context.py  inspiration_memory.py  inspirations.py  memory.py  migration.py  models.py  product_description.py  storage.py  text_utils.py  tools.py
src/sip_videogen/config/: __init__.py  constants.py  costs.py  logging.py  settings.py  user_preferences.py
src/sip_videogen/generators/: __init__.py  base.py  factory.py  image_generator.py  kling_generator.py  music_generator.py  nano_banana_generator.py  prompt_builder.py  sora_generator.py  video_generator.py
tests/: conftest.py  test_advisor_tools.py  test_advisor_validation.py  test_agents.py  test_asset_service.py  test_auto_compaction.py  test_brand_advisor.py  test_brand_agents.py  test_brand_creation_models.py  test_brand_integration.py  test_brand_service.py  test_brands_memory.py  test_brands_migration.py  test_brands_storage.py  test_bridge_types.py  test_cli.py  test_context_budget.py  test_deep_research.py  test_document_service.py  test_evaluation.py  test_ffmpeg_music.py  test_file_utils.py  test_generators.py  test_history_manager.py  test_image_production.py  test_image_status.py  test_job_storage.py  test_lean_context.py  test_migration.py  test_models.py  test_music_director.py  test_music_generator.py  test_music_models.py  test_orchestrator.py  test_other_services.py  test_product_specs.py  test_research.py  test_session_manager.py  test_single_clip_video.py  test_skills_registry.py  (+10 more)
tests/studio/: __init__.py  test_batch_detection.py  test_chat_service_research_mode.py  test_decorators.py  test_image_pool.py  test_image_utils.py  test_quick_generator_service.py  test_rate_limiter.py  test_state.py
(+468 files in other folders)
