[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sip-videogen"
version = "0.1.0"
description = "CLI tool that transforms vague video ideas into complete videos using an AI agent team"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "SIP Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai-agents>=0.1.0",
    "google-genai>=1.51.0",
    "google-cloud-storage>=2.0.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sip-videogen = "sip_videogen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_videogen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
