[project]
name = "sip-studio"
version = "0.9.5"
description = "Sip Studio - AI-powered brand management and video generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sip Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai-agents>=0.1.0",
    "google-genai>=1.51.0",
    "google-cloud-storage>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "packaging>=23.0",
    "Pillow>=10.0.0",
    "firecrawl-py>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chufeng-huang-sipaway/sip-videogen"
Repository = "https://github.com/chufeng-huang-sipaway/sip-videogen"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Long prompt strings and log messages
"src/sip_studio/advisor/tools/*.py" = ["E501"]
"src/sip_studio/advisor/*_analyzer.py" = ["E501"]
"src/sip_studio/advisor/*_prompt.py" = ["E501"]
"src/sip_studio/brands/context.py" = ["E501"]
"src/sip_studio/brands/models/*.py" = ["E501"]
"src/sip_studio/advisor/validation/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
#Pragmatic settings - catch real bugs, ignore noise
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
#Keep these strict checks - they catch real bugs
disallow_any_generics = false
strict_equality = true
extra_checks = false
[[tool.mypy.overrides]]
module = ["agents.*","google.*","tenacity.*","openai.*","httpx.*","jwt.*","firecrawl.*","rich.*","yaml.*","requests.*","packaging.*"]
ignore_missing_imports = true
ignore_errors = true
